Update titan-hadoop-2 test dependency to hbase-1.0 and add HBaseInputFormat tests to reproduce issue #1268.

--- a/titan-hadoop-parent/pom.xml
+++ b/titan-hadoop-parent/pom.xml
@@ -14,7 +14,7 @@
     <properties>
         <top.level.basedir>${project.parent.basedir}</top.level.basedir>
         <skipCassandra>${skipTests}</skipCassandra>
-        <skipHBase>true</skipHBase>
+        <skipHBase>${skipTests}</skipHBase>
         <skipPipeline>${skipTests}</skipPipeline>
     </properties>
 
