Update output location for HBaseInputFormat tests.

--- a/titan-hadoop-parent/titan-hadoop-core/src/test/resources/hbase-read.properties
+++ b/titan-hadoop-parent/titan-hadoop-core/src/test/resources/hbase-read.properties
@@ -5,7 +5,7 @@ gremlin.hadoop.graphOutputFormat=org.apache.hadoop.mapreduce.lib.output.NullOutp
 
 gremlin.hadoop.jarsInDistributedCache=true
 gremlin.hadoop.inputLocation=none
-gremlin.hadoop.outputLocation=output
+gremlin.hadoop.outputLocation=target/output
 titanmr.ioformat.conf.storage.backend=hbase
 titanmr.ioformat.conf.storage.hostname=localhost
 #####################################
