--- a/titan-hadoop-parent/titan-hadoop-core/src/test/resources/hbase-read.properties
+++ b/titan-hadoop-parent/titan-hadoop-core/src/test/resources/hbase-read.properties
@@ -27,3 +27,4 @@ giraph.maxMessagesInMemory=100000
 spark.master=local[4]
 spark.executor.memory=1g
 spark.serializer=org.apache.spark.serializer.KryoSerializer
+spark.kryo.registrator=com.thinkaurelius.titan.hadoop.serialize.TitanKryoRegistrator
