--- a/titan-doc/pom.xml
+++ b/titan-doc/pom.xml
@@ -1,15 +1,15 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>com.thinkaurelius.titan</groupId>
+        <groupId>gorillalabs</groupId>
         <artifactId>titan</artifactId>
-        <version>1.1.0g-SNAPSHOT</version>
+        <version>1.1.0g</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
     <packaging>pom</packaging>
     <artifactId>titan-doc</artifactId>
     <name>Titan-Doc: AsciiDoc Manual for Titan</name>
-    <url>http://thinkaurelius.github.com/titan/</url>
+    <url>http://gorillalabs.github.com/titan/</url>
 
     <properties>
         <top.level.basedir>${project.basedir}/..</top.level.basedir>
@@ -45,14 +45,13 @@
     </dependencies>
 
     <build>
-        <!-- Used during release:perform to upload to S3 -->
-        <extensions>
+        <!--extensions>
             <extension>
                 <groupId>org.kuali.maven.wagons</groupId>
                 <artifactId>maven-s3-wagon</artifactId>
                 <version>${kuali.s3.wagon.version}</version>
             </extension>
-        </extensions>
+        </extensions -->
 
         <plugins>
             <!--
@@ -316,7 +315,7 @@
                 </property>
             </activation>
 
-            <build>
+            <!-- build>
                 <plugins>
                     <plugin>
                         <groupId>org.codehaus.mojo</groupId>
@@ -331,14 +330,14 @@
                                 </goals>
                                 <configuration>
                                     <fromDir>${htmlchunk.output.dir}</fromDir>
-                                    <serverId>aurelius.s3</serverId> <!-- your ~/.m2/settings.xml must match -->
+                                    <serverId>aurelius.s3</serverId> your ~/.m2/settings.xml must match
                                     <url>s3://s3.thinkaurelius.com/docs/titan/${project.version}</url>
                                 </configuration>
                             </execution>
                         </executions>
                     </plugin>
                 </plugins>
-            </build>
+            </build -->
         </profile>
     </profiles>
 </project>
