--- a/titan-cassandra/pom.xml
+++ b/titan-cassandra/pom.xml
@@ -1,14 +1,14 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>com.thinkaurelius.titan</groupId>
+        <groupId>gorillalabs</groupId>
         <artifactId>titan</artifactId>
-        <version>1.1.0g-SNAPSHOT</version>
+        <version>1.1.0g</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
     <artifactId>titan-cassandra</artifactId>
     <name>Titan-Cassandra: Distributed Graph Database</name>
-    <url>http://thinkaurelius.github.com/titan/</url>
+    <url>http://gorillalabs.github.com/titan/</url>
     <properties>
         <astyanax.version>3.8.0</astyanax.version>
         <jamm.group>com.github.jbellis</jamm.group>
@@ -22,12 +22,12 @@
     
     <dependencies>
         <dependency>
-            <groupId>com.thinkaurelius.titan</groupId>
+            <groupId>gorillalabs</groupId>
             <artifactId>titan-core</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
-            <groupId>com.thinkaurelius.titan</groupId>
+            <groupId>gorillalabs</groupId>
             <artifactId>titan-test</artifactId>
             <version>${project.version}</version>
             <scope>test</scope>
