--- a/titan-dist/titan-dist-hadoop-2/pom.xml
+++ b/titan-dist/titan-dist-hadoop-2/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <groupId>gorillalabs</groupId>
         <artifactId>titan-dist</artifactId>
-        <version>1.1.0g</version>
+        <version>1.1.1</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
     <packaging>pom</packaging>
