--- a/titan-es/pom.xml
+++ b/titan-es/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>gorillalabs</groupId>
         <artifactId>titan</artifactId>
-        <version>1.1.0g</version>
+        <version>1.1.1</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
     <artifactId>titan-es</artifactId>
