--- a/titan-hbase-parent/titan-hbase-10/pom.xml
+++ b/titan-hbase-parent/titan-hbase-10/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <groupId>gorillalabs</groupId>
         <artifactId>titan-hbase-parent</artifactId>
-        <version>1.1.0g</version>
+        <version>1.1.1</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
     <artifactId>titan-hbase-10</artifactId>
